--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,14 @@ body {
   font-weight: bold !important;
   color: #6b6b6b !important;
 }
-.header-hero {
+.header-hero,
+.default-hero {
   min-height: calc(100vh - 82px);
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url('https://source.unsplash.com/1600x900/?chicken,foods') center/cover
+      no-repeat;
+}
+.default-hero {
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url('https://source.unsplash.com/1600x900/?chicken,foods') center/cover
       no-repeat;
